--- a/src/python/grapl-notebook/Dockerfile
+++ b/src/python/grapl-notebook/Dockerfile
@@ -4,6 +4,6 @@ RUN pip install --user --upgrade grapl_analyzerlib
 COPY ./jupyter_notebook_config.py /home/jovyan/.jupyter/jupyter_notebook_config.py
 COPY ./GraplProvision.ipynb /home/jovyan/
 COPY ./Demo_Engagement.ipynb /home/jovyan/
-COPY ./model_plugins/ /home/jovyan/model_plugins
+RUN mkdir -p /home/jovyan/model_plugins
 
 CMD jupyter notebook
