--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -45,6 +45,7 @@ jobs:
           docker push grapl/grapl-engagement-edge:$VERSION-$CHANNEL
           docker push grapl/grapl-model-plugin-deployer:$VERSION-$CHANNEL
           docker push grapl/grapl-engagement-view:$VERSION-$CHANNEL
+          docker push grapl/grapl-graphql-endpoint:$VERSION-$CHANNEL
           docker push grapl/grapl-graph-provision:$VERSION-$CHANNEL
           docker push grapl/grapl-dynamodb-provision:$VERSION-$CHANNEL
 
@@ -52,57 +53,61 @@ jobs:
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          docker create -ti --name cp-sysmon-subgraph-generator grapl/grapl-sysmon-subgraph-generator:$VERSION bash
+          docker create -ti --name cp-sysmon-subgraph-generator grapl/grapl-sysmon-subgraph-generator:$VERSION-$CHANNEL bash
           docker cp-sysmon-subgraph-generator:/target/release/sysmon-subgraph-generator .
           docker rm -f cp-sysmon-subgraph-generator
           zip -9 ./sysmon-subgraph-generator ./sysmon-subgraph-generator-$VERSION-$CHANNEL.zip
           rm ./sysmon-subgraph-generator
 
-          docker create -ti --name cp-generic-subgraph-generator grapl/grapl-generic-subgraph-generator:$VERSION bash
+          docker create -ti --name cp-generic-subgraph-generator grapl/grapl-generic-subgraph-generator:$VERSION-$CHANNEL bash
           docker cp cp-generic-subgraph-generator:/target/release/generic-subgraph-generator .
           docker rm -f cp-generic-subgraph-generator
           zip -9 ./generic-subgraph-generator ./generic-subgraph-generator-$VERSION-$CHANNEL.zip
           rm ./generic-subgraph-generator
 
-          docker create -ti --name cp-node-identifier grapl/grapl-node-identifier:$VERSION bash
+          docker create -ti --name cp-node-identifier grapl/grapl-node-identifier:$VERSION-$CHANNEL bash
           docker cp cp-node-identifier:/target/release/node-identifier .
           docker rm -f cp-node-identifier
           zip -9 ./node-identifier ./node-identifier-$VERSION-$CHANNEL.zip
           rm ./node-identifier
 
-          docker create -ti --name cp-node-identifier-retry-handler grapl/grapl-node-identifier-retry-handler:$VERSION bash
+          docker create -ti --name cp-node-identifier-retry-handler grapl/grapl-node-identifier-retry-handler:$VERSION-$CHANNEL bash
           docker cp cp-node-identifier-retry-handler:/target/release/node-identifier-retry-handler .
           docker rm -f cp-node-identifier-retry-handler
           zip -9 ./node-identifier-retry-handler ./node-identifier-retry-handler-$VERSION-$CHANNEL.zip
           rm ./node-identifier-retry-handler
 
-          docker create -ti --name cp-graph-merger grapl/grapl-graph-merger:$VERSION bash
+          docker create -ti --name cp-graph-merger grapl/grapl-graph-merger:$VERSION-$CHANNEL bash
           docker cp cp-graph-merger:/target/release/graph-merger .
           docker rm -f cp-graph-merger
           zip -9 ./graph-merger ./graph-merger-$VERSION-$CHANNEL.zip
           rm ./graph-merger
 
-          docker create -ti --name cp-analyzer-dispatcher grapl/grapl-analyzer-dispatcher:$VERSION bash
+          docker create -ti --name cp-analyzer-dispatcher grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL bash
           docker cp cp-analyzer-dispatcher:/target/release/analyzer-dispatcher .
           docker rm -f cp-analyzer-dispatcher
           zip -9 ./analyzer-dispatcher ./analyzer-dispatcher-$VERSION-$CHANNEL.zip
           rm ./analyzer-dispatcher
 
-          docker create -ti --name cp-analyzer-executor grapl/grapl-analyzer-executor:$VERSION bash
+          docker create -ti --name cp-analyzer-executor grapl/grapl-analyzer-executor:$VERSION-$CHANNEL bash
           docker cp cp-analyzer-executor:/lambda.zip analyzer-executor-$VERSION-$CHANNEL.zip
           docker rm -f cp-analyzer-executor
 
-          docker create -ti --name cp-engagement-creator grapl/grapl-engagement-creator:$VERSION bash
+          docker create -ti --name cp-engagement-creator grapl/grapl-engagement-creator:$VERSION-$CHANNEL bash
           docker cp cp-engagement-creator:/lambda.zip engagement-creator-$VERSION-$CHANNEL.zip
           docker rm -f cp-engagement-creator
 
-          docker create -ti --name cp-engagement-edge grapl/grapl-engagement-edge:$VERSION bash
+          docker create -ti --name cp-engagement-edge grapl/grapl-engagement-edge:$VERSION-$CHANNEL bash
           docker cp cp-engagement-edge:/lambda.zip engagement-edge-$VERSION-$CHANNEL.zip
           docker rm -f cp-engagement-edge
 
-          docker create -ti --name cp-model-plugin-deployer grapl/grapl-model-plugin-deployer:$VERSION bash
+          docker create -ti --name cp-model-plugin-deployer grapl/grapl-model-plugin-deployer:$VERSION-$CHANNEL bash
           docker cp cp-model-plugin-deployer:/lambda.zip model-plugin-deployer-$VERSION-$CHANNEL.zip
           docker rm -f cp-model-plugin-deployer
+
+          docker create -ti --name cp-graphql-endpoint grapl/grapl-graphql-endpoint:$VERSION-$CHANNEL bash
+          docker cp cp-graphql-endpoint:/lambda.zip graphql-endpoint-$VERSION-$CHANNEL.zip
+          docker rm -f cp-graphql-endpoint
 
       - name: Upload sysmon-subgraph-generator to Github
         uses: actions/upload-release-asset@v1
@@ -212,4 +217,15 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./model-plugin-deployer-$VERSION-$CHANNEL.zip
           asset_name: model-plugin-deployer-$VERSION-$CHANNEL.zip
+          asset_content_type: application/zip
+
+      - name: Upload graphql-endpoint to Github
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ github.event.release.tag_name }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./graphql-endpoint-$VERSION-$CHANNEL.zip
+          asset_name: graphql-endpoint-$VERSION-$CHANNEL.zip
           asset_content_type: application/zip
