fix graphql endpoint Dockerfile

--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -19,4 +19,6 @@ COPY server.js .
 RUN zip --quiet -9r /lambda.zip .
 
 FROM node:alpine3.10 AS grapl-graphql-endpoint
+RUN apk add --no-cache zip
 COPY --from=grapl-graphql-endpoint-build /lambda.zip /
+RUN unzip -q lambda.zip
