Internal 9 fix workflow (#76)
* trigger on prereleases as well

* actions/checkout@v2 should checkout the correct branch anyway?

* bash

* fix tagged builds

* add graphql-endpoint to build scripts

* fix graphql endpoint Dockerfile

--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine3.10 as build
+FROM node:alpine3.10 AS grapl-graphql-endpoint-build
 WORKDIR /lambda
 
 RUN apk upgrade && apk add zip
@@ -18,7 +18,7 @@ COPY modules/* ./modules/
 COPY server.js .
 RUN zip --quiet -9r /lambda.zip .
 
-#FROM scratch
-
-#COPY --from=0 /lambda.zip /
-
+FROM node:alpine3.10 AS grapl-graphql-endpoint
+RUN apk add --no-cache zip
+COPY --from=grapl-graphql-endpoint-build /lambda.zip /
+RUN unzip -q lambda.zip
