--- a/src/js/grapl-cdk/.gitignore
+++ b/src/js/grapl-cdk/.gitignore
@@ -1,1 +1,13 @@
-cdk.out/
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+.env
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
+# Parcel build directories
+.cache
+.build
