--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -1,39 +1,49 @@
 {
   "name": "grapl-cdk",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "bin": {
+    "grapl-cdk": "bin/grapl-cdk.js"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "cdk": "cdk"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@aws-cdk/assert": "1.40.0",
+    "@types/jest": "^25.2.1",
+    "@types/node": "13.13.5",
+    "@types/uuid": "^7.0.3",
+    "aws-cdk": "^1.40.0",
+    "jest": "^25.5.4",
+    "ts-jest": "^25.5.1",
+    "ts-node": "^8.10.1",
+    "typescript": "~3.8.3"
+  },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.38.0",
-    "@aws-cdk/aws-cloudtrail": "^1.38.0",
-    "@aws-cdk/aws-ec2": "^1.38.0",
-    "@aws-cdk/aws-ecs": "^1.38.0",
-    "@aws-cdk/aws-elasticache": "^1.38.0",
-    "@aws-cdk/aws-lambda": "^1.38.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.38.0",
-    "@aws-cdk/aws-rds": "^1.38.0",
-    "@aws-cdk/aws-route53": "^1.38.0",
-    "@aws-cdk/aws-s3": "^1.38.0",
-    "@aws-cdk/aws-s3-deployment": "^1.38.0",
-    "@aws-cdk/aws-s3-notifications": "^1.38.0",
-    "@aws-cdk/aws-sagemaker": "^1.38.0",
-    "@aws-cdk/aws-servicediscovery": "^1.38.0",
-    "@aws-cdk/aws-sns": "^1.38.0",
-    "@aws-cdk/aws-sqs": "^1.38.0",
-    "@aws-cdk/core": "^1.38.0",
-    "@types/node": "^10.17.21",
-    "aws-cdk": "^1.38.0",
+    "@aws-cdk/aws-apigateway": "^1.40.0",
+    "@aws-cdk/aws-cloudformation": "^1.40.0",
+    "@aws-cdk/aws-dynamodb": "^1.40.0",
+    "@aws-cdk/aws-ec2": "^1.40.0",
+    "@aws-cdk/aws-ecs": "^1.40.0",
+    "@aws-cdk/aws-elasticache": "^1.40.0",
+    "@aws-cdk/aws-iam": "^1.40.0",
+    "@aws-cdk/aws-lambda": "^1.40.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.40.0",
+    "@aws-cdk/aws-s3": "^1.40.0",
+    "@aws-cdk/aws-s3-deployment": "^1.40.0",
+    "@aws-cdk/aws-s3-notifications": "^1.40.0",
+    "@aws-cdk/aws-sagemaker": "^1.40.0",
+    "@aws-cdk/aws-servicediscovery": "^1.40.0",
+    "@aws-cdk/aws-sns": "^1.40.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.40.0",
+    "@aws-cdk/aws-sqs": "^1.40.0",
+    "@aws-cdk/core": "^1.40.0",
+    "@types/node-dir": "0.0.33",
     "aws-sdk": "^2.673.0",
     "node-dir": "^0.1.17",
     "node-env-file": "^0.1.8",
-    "uuid": "^3.3.3"
+    "source-map-support": "^0.5.19"
   }
 }
