--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -56,37 +56,37 @@ jobs:
           docker create -ti --name cp-sysmon-subgraph-generator grapl/grapl-sysmon-subgraph-generator:$VERSION-$CHANNEL bash
           docker cp cp-sysmon-subgraph-generator:/sysmon-subgraph-generator .
           docker rm -f cp-sysmon-subgraph-generator
-          zip -9 ./sysmon-subgraph-generator ./sysmon-subgraph-generator-$VERSION-$CHANNEL.zip
+          zip -9 sysmon-subgraph-generator-$VERSION-$CHANNEL.zip ./sysmon-subgraph-generator
           rm ./sysmon-subgraph-generator
 
           docker create -ti --name cp-generic-subgraph-generator grapl/grapl-generic-subgraph-generator:$VERSION-$CHANNEL bash
           docker cp cp-generic-subgraph-generator:/generic-subgraph-generator .
           docker rm -f cp-generic-subgraph-generator
-          zip -9 ./generic-subgraph-generator ./generic-subgraph-generator-$VERSION-$CHANNEL.zip
+          zip -9 generic-subgraph-generator-$VERSION-$CHANNEL.zip ./generic-subgraph-generator
           rm ./generic-subgraph-generator
 
           docker create -ti --name cp-node-identifier grapl/grapl-node-identifier:$VERSION-$CHANNEL bash
           docker cp cp-node-identifier:/node-identifier .
           docker rm -f cp-node-identifier
-          zip -9 ./node-identifier ./node-identifier-$VERSION-$CHANNEL.zip
+          zip -9 node-identifier-$VERSION-$CHANNEL.zip ./node-identifier
           rm ./node-identifier
 
           docker create -ti --name cp-node-identifier-retry-handler grapl/grapl-node-identifier-retry-handler:$VERSION-$CHANNEL bash
           docker cp cp-node-identifier-retry-handler:/node-identifier-retry-handler .
           docker rm -f cp-node-identifier-retry-handler
-          zip -9 ./node-identifier-retry-handler ./node-identifier-retry-handler-$VERSION-$CHANNEL.zip
+          zip -9 node-identifier-retry-handler-$VERSION-$CHANNEL.zip ./node-identifier-retry-handler
           rm ./node-identifier-retry-handler
 
           docker create -ti --name cp-graph-merger grapl/grapl-graph-merger:$VERSION-$CHANNEL bash
           docker cp cp-graph-merger:/graph-merger .
           docker rm -f cp-graph-merger
-          zip -9 ./graph-merger ./graph-merger-$VERSION-$CHANNEL.zip
+          zip -9 graph-merger-$VERSION-$CHANNEL.zip ./graph-merger
           rm ./graph-merger
 
           docker create -ti --name cp-analyzer-dispatcher grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL bash
           docker cp cp-analyzer-dispatcher:/analyzer-dispatcher .
           docker rm -f cp-analyzer-dispatcher
-          zip -9 ./analyzer-dispatcher ./analyzer-dispatcher-$VERSION-$CHANNEL.zip
+          zip -9 analyzer-dispatcher-$VERSION-$CHANNEL.zip ./analyzer-dispatcher
           rm ./analyzer-dispatcher
 
           docker create -ti --name cp-analyzer-executor grapl/grapl-analyzer-executor:$VERSION-$CHANNEL bash
