--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -43,6 +43,7 @@ jobs:
           docker push grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL
           docker push grapl/grapl-analyzer-executor:$VERSION-$CHANNEL
           docker push grapl/grapl-engagement-creator:$VERSION-$CHANNEL
+          docker push grapl/grapl-notebook:$VERSION-$CHANNEL
           docker push grapl/grapl-engagement-edge:$VERSION-$CHANNEL
           docker push grapl/grapl-model-plugin-deployer:$VERSION-$CHANNEL
           docker push grapl/grapl-engagement-view:$VERSION-$CHANNEL
