--- a/src/rust/sysmon-subgraph-generator/Dockerfile
+++ b/src/rust/sysmon-subgraph-generator/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine AS grapl-sysmon-subgraph-generator
 RUN apk add --no-cache libgcc
 ARG release_target="debug"
-COPY --from=grapl/grapl-rust-src-build /home/grapl/target/${release_target}/sysmon-subgraph-generator /
-CMD ["sysmon-subgraph-generator"]
+COPY --from=grapl/grapl-rust-src-build /home/grapl/target/${release_target}/sysmon-subgraph-generator /bootstrap
+CMD ["./bootstrap"]
