--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -57,45 +57,45 @@ jobs:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
           docker create -ti --name cp-sysmon-subgraph-generator grapl/grapl-sysmon-subgraph-generator:$VERSION-$CHANNEL bash
-          docker cp cp-sysmon-subgraph-generator:/sysmon-subgraph-generator .
+          docker cp cp-sysmon-subgraph-generator:/sysmon-subgraph-generator ./bootstrap
           docker rm -f cp-sysmon-subgraph-generator
-          zip -9 sysmon-subgraph-generator-$VERSION-$CHANNEL.zip ./sysmon-subgraph-generator
-          rm ./sysmon-subgraph-generator
+          zip -9 sysmon-subgraph-generator-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=sysmon-subgraph-generator::sysmon-subgraph-generator-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-generic-subgraph-generator grapl/grapl-generic-subgraph-generator:$VERSION-$CHANNEL bash
-          docker cp cp-generic-subgraph-generator:/generic-subgraph-generator .
+          docker cp cp-generic-subgraph-generator:/generic-subgraph-generator ./bootstrap
           docker rm -f cp-generic-subgraph-generator
-          zip -9 generic-subgraph-generator-$VERSION-$CHANNEL.zip ./generic-subgraph-generator
-          rm ./generic-subgraph-generator
+          zip -9 generic-subgraph-generator-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=generic-subgraph-generator::generic-subgraph-generator-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-node-identifier grapl/grapl-node-identifier:$VERSION-$CHANNEL bash
-          docker cp cp-node-identifier:/node-identifier .
+          docker cp cp-node-identifier:/node-identifier ./bootstrap
           docker rm -f cp-node-identifier
-          zip -9 node-identifier-$VERSION-$CHANNEL.zip ./node-identifier
-          rm ./node-identifier
+          zip -9 node-identifier-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=node-identifier::node-identifier-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-node-identifier-retry-handler grapl/grapl-node-identifier-retry-handler:$VERSION-$CHANNEL bash
-          docker cp cp-node-identifier-retry-handler:/node-identifier-retry-handler .
+          docker cp cp-node-identifier-retry-handler:/node-identifier-retry-handler ./bootstrap
           docker rm -f cp-node-identifier-retry-handler
-          zip -9 node-identifier-retry-handler-$VERSION-$CHANNEL.zip ./node-identifier-retry-handler
-          rm ./node-identifier-retry-handler
+          zip -9 node-identifier-retry-handler-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=node-identifier-retry-handler::node-identifier-retry-handler-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-graph-merger grapl/grapl-graph-merger:$VERSION-$CHANNEL bash
-          docker cp cp-graph-merger:/graph-merger .
+          docker cp cp-graph-merger:/graph-merger ./bootstrap
           docker rm -f cp-graph-merger
-          zip -9 graph-merger-$VERSION-$CHANNEL.zip ./graph-merger
-          rm ./graph-merger
+          zip -9 graph-merger-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=graph-merger::graph-merger-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-analyzer-dispatcher grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL bash
-          docker cp cp-analyzer-dispatcher:/analyzer-dispatcher .
+          docker cp cp-analyzer-dispatcher:/analyzer-dispatcher ./bootstrap
           docker rm -f cp-analyzer-dispatcher
-          zip -9 analyzer-dispatcher-$VERSION-$CHANNEL.zip ./analyzer-dispatcher
-          rm ./analyzer-dispatcher
+          zip -9 analyzer-dispatcher-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
           echo "::set-output name=analyzer-dispatcher::analyzer-dispatcher-$VERSION-$CHANNEL.zip"
 
           docker create -ti --name cp-analyzer-executor grapl/grapl-analyzer-executor:$VERSION-$CHANNEL bash
