--- a/src/rust/analyzer-dispatcher/Dockerfile
+++ b/src/rust/analyzer-dispatcher/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine AS grapl-analyzer-dispatcher
 RUN apk add --no-cache libgcc
 ARG release_target="debug"
-COPY --from=grapl/grapl-rust-src-build /home/grapl/target/${release_target}/analyzer-dispatcher /bootstrap
-CMD ["./bootstrap"]
+COPY --from=grapl/grapl-rust-src-build /home/grapl/target/${release_target}/analyzer-dispatcher /
+CMD ["./analyzer-dispatcher"]
