--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -10,6 +10,7 @@
   "author": "Andrea Piazza",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.683.0",
     "aws-serverless-express": "^3.3.8",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
