--- a/src/python/grapl_analyzerlib/Dockerfile
+++ b/src/python/grapl_analyzerlib/Dockerfile
@@ -4,3 +4,4 @@ WORKDIR /home/grapl
 COPY --chown=grapl . grapl_analyzerlib
 COPY --from=grapl/grapl-graph-descriptions-python-build /home/grapl/venv venv
 RUN source venv/bin/activate && cd grapl_analyzerlib && pip install .
+RUN source venv/bin/activate && cd grapl_analyzerlib && python setup.py sdist bdist_wheel
