--- a/src/rust/graph-descriptions/Dockerfile
+++ b/src/rust/graph-descriptions/Dockerfile
@@ -4,3 +4,4 @@ WORKDIR /home/grapl
 COPY --chown=grapl . graph-descriptions
 COPY --from=grapl/grapl-python-build /home/grapl/venv venv
 RUN source venv/bin/activate && cd graph-descriptions && pip install .
+RUN source venv/bin/activate && cd graph-descriptions && python setup.py sdist bdist_wheel
