--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.mypy_cache
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
